scalaz actor tests refactored to use lifo for-join pool, removed -XX:-UseBiasedLocking option