@@ -142,7 +142,7 @@
                         <includes>
                             <include>**/*Spec.class</include>
                         </includes>
-                        <argLine>-server -Xms4g -Xmx4g -Xss1m -XX:NewSize=3g -XX:PermSize=128m -XX:MaxPermSize=128m -XX:+TieredCompilation -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
+                        <argLine>-server -Xms4g -Xmx4g -Xss1m -XX:NewSize=3g -XX:PermSize=128m -XX:MaxPermSize=128m -XX:+TieredCompilation -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:+AlwaysPreTouch</argLine>
                     </configuration>
                 </plugin>
             </plugins>
@@ -169,7 +169,7 @@
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-plugin</artifactId>
                             <configuration>
-                                <argLine>-server -Xms1280m -Xmx1280m -Xss1m -XX:NewSize=960m -XX:PermSize=128m -XX:MaxPermSize=128m -XX:+TieredCompilation -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
+                                <argLine>-server -Xms1280m -Xmx1280m -Xss1m -XX:NewSize=960m -XX:PermSize=128m -XX:MaxPermSize=128m -XX:+TieredCompilation -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:+AlwaysPreTouch</argLine>
                             </configuration>
                         </plugin>
                     </plugins>
@@ -185,7 +185,7 @@
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-surefire-plugin</artifactId>
                             <configuration>
-                                <argLine>-server -Xms2048m -Xmx2048m -Xss1m -XX:NewSize=1536m -XX:PermSize=128m -XX:MaxPermSize=128m -XX:+TieredCompilation -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
+                                <argLine>-server -Xms2048m -Xmx2048m -Xss1m -XX:NewSize=1536m -XX:PermSize=128m -XX:MaxPermSize=128m -XX:+TieredCompilation -XX:+UseParallelGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:+AlwaysPreTouch</argLine>
                                 <useFile>false</useFile>
                             </configuration>
                         </plugin>
